--- a/styles/recipes.styl
+++ b/styles/recipes.styl
@@ -28,23 +28,6 @@
   &.incomplete
     padding-bottom 12px
 
-  .delete-button
-    overflow hidden
-    // Width is set in javascript to keep things in one place.
-    position absolute
-    top 0
-
-    background-color red
-    font-weight 600
-    text-align center
-    color grey1
-    height 100%
-
-    .text
-      position relative
-      top 50%
-      line-height 0
-
 
 .recipe-view, .editable-recipe-view
   .title-bar, .button-bar
